Fix up alignments

--- a/app/assets/stylesheets/streets.scss
+++ b/app/assets/stylesheets/streets.scss
@@ -13,6 +13,7 @@
     line-height: 1;
     color: $emphasis;
     text-align: center;
+    flex: none;
   }
 
   .street {
